# wordbase-hacker

./: .classpath  .gitignore  .project  AndroidManifest.xml  LICENSE  README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  adapter.cpp  adapter.h  solver.cpp  solver.hpp  test.cpp  trie.hpp  util.cpp  util.hpp
app/src/main/java/net/pietu1998/wordbasehacker/: BoardActivity.java  BoardDrawable.java  BootReceiver.java  GameListActivity.java  HackerApplication.java  HudService.java  HudUtils.java  HudView.java  NativeParamsDialog.java  RootShell.java  ScoringDialog.java  SettingsActivity.java  ThemeUtils.java
app/src/main/java/net/pietu1998/wordbasehacker/solver/: Board.java  Coordinate.java  Game.java  LegacySolver.java  (+6 more)
app/src/main/res/drawable/: ic_wordbase.xml
app/src/main/res/layout/: activity_board.xml  activity_game_list.xml  info_dialog.xml  native_param_dialog.xml  scoring_dialog.xml
app/src/main/res/menu/: boardmenu.xml  mainmenu.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-fi/: strings.xml
app/src/main/res/xml/: preferences.xml
gradle/wrapper/: gradle-wrapper.properties
res/layout/: activity_board.xml  activity_game_list.xml  scoring_dialog.xml
res/menu/: mainmenu.xml
res/values/: strings.xml
src/net/pietu1998/wordbasehacker/: BoardActivity.java  BoardDrawable.java  BootReceiver.java  GameListActivity.java  HudHandler.java  HudService.java
src/net/pietu1998/wordbasehacker/solver/: Board.java  Coordinate.java  Game.java  Move.java  Score.java  Scoring.java  Tile.java
